--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,19 +4,29 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
 trigger:
-  - master
+- master
 
-  pool:
-    vmImage: 'Ubuntu-16.04'
+strategy:
+  matrix:
+    jdk10_linux:
+      imageName: "ubuntu-16.04"
+      jdk_version: "1.10"
+    jdk11_windows:
+      imageName: "vs2017-win2016"
+      jdk_version: "1.11"
+  maxParallel: 2
 
-  steps:
-    - task: Maven@3
-      inputs:
-        mavenPomFile: 'pom.xml'
-        mavenOptions: '-Xmx3072m'
-        javaHomeOption: 'JDKVersion'
-        jdkVersionOption: '1.8'
-        jdkArchitectureOption: 'x64'
-        publishJUnitResults: false
-        testResultsFiles: '**/surefire-reports/TEST-*.xml'
-        goals: 'package'
+pool:
+  vmImage: $(imageName)
+
+steps:
+  - task: Maven@3
+    inputs:
+      mavenPomFile: "pom.xml"
+      mavenOptions: "-Xmx3072m"
+      javaHomeOption: "JDKVersion"
+      jdkVersionOption: "default"
+      jdkArchitectureOption: "x64"
+      publishJUnitResults: true
+      testResultsFiles: "**/TEST-*.xml"
+      goals: "package"
